--- a/WPF YouTube tutorial/App.xaml
+++ b/WPF YouTube tutorial/App.xaml
@@ -4,7 +4,19 @@
              xmlns:local="clr-namespace:WPF_YouTube_tutorial"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
+        <Style TargetType="Button" x:Key="RoundButton">
+            <Style.Resources>
+                <Style TargetType="Border">
+                    <Setter Property="CornerRadius" Value="10" />
+                </Style>
+            </Style.Resources>
+
+        </Style>
+
         
+
         
+
+
     </Application.Resources>
 </Application>
