--- a/WPF YouTube tutorial/MainWindow.xaml
+++ b/WPF YouTube tutorial/MainWindow.xaml
@@ -9,8 +9,10 @@
          
 
     <Grid>
+        
         <Image Source="/Resources/Images/background_bb.jpg" HorizontalAlignment="Center" Height="auto" VerticalAlignment="Center" Width="auto" Stretch="UniformToFill"/>
 
+        
 
         <TextBlock> 
             <Label Content="MEAT STEEL" 
@@ -20,9 +22,32 @@
                    HorizontalAlignment="Center" 
                    Margin="50"
                    FontWeight="ExtraBold"
-                   FontFamily="Times New Roman" />
+                   FontFamily="Helvetica" />
             
         </TextBlock>
+
+        
+        
+        <Button Name="btnNewSession"
+                Content="New Session"
+                Height="50" Width="150"
+                VerticalAlignment="Top"
+                HorizontalAlignment="Left"
+                Margin="100, 150, 0, 0"
+                Foreground="Gray"
+                Background="#121212"
+                FontWeight="Normal"
+                FontSize="15"
+                FontStyle="Italic"
+                FontFamily="Impact"
+                Style="{DynamicResource RoundButton}"
+
+            />
+
+       
+
+
+
 
 
     </Grid>
