--- a/WPF YouTube tutorial/MainWindow.xaml
+++ b/WPF YouTube tutorial/MainWindow.xaml
@@ -6,46 +6,14 @@
         xmlns:local="clr-namespace:WPF_YouTube_tutorial"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
+        
          
 
     <Grid>
-        
+
         <Image Source="/Resources/Images/background_bb.jpg" HorizontalAlignment="Center" Height="auto" VerticalAlignment="Center" Width="auto" Stretch="UniformToFill"/>
 
-        
-
-        <TextBlock> 
-            <Label Content="MEAT STEEL" 
-                   Foreground="DimGray" 
-                   FontSize="50" 
-                   VerticalAlignment="Center" 
-                   HorizontalAlignment="Center" 
-                   Margin="50"
-                   FontWeight="ExtraBold"
-                   FontFamily="Helvetica" />
-            
-        </TextBlock>
-
-        
-        
-        <Button Name="btnNewSession"
-                Content="New Session"
-                Height="50" Width="150"
-                VerticalAlignment="Top"
-                HorizontalAlignment="Left"
-                Margin="100, 150, 0, 0"
-                Foreground="Gray"
-                Background="#121212"
-                FontWeight="Normal"
-                FontSize="15"
-                FontStyle="Italic"
-                FontFamily="Impact"
-                Style="{DynamicResource RoundButton}"
-
-            />
-
-       
-
+        <Frame Name="mainFrame" Content="Frame" HorizontalAlignment="Center" VerticalAlignment="Center" Source="MainWindow.xaml" NavigationUIVisibility="Hidden" />
 
 
 
