--- a/WPF YouTube tutorial/Pages/WorkoutLibraryPage.xaml
+++ b/WPF YouTube tutorial/Pages/WorkoutLibraryPage.xaml
@@ -1,4 +1,4 @@
-﻿<Page x:Class="WPF_YouTube_tutorial.Pages.NewSessionPage"
+﻿<Page x:Class="WPF_YouTube_tutorial.Pages.WorkoutLibraryPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -6,13 +6,9 @@
       xmlns:local="clr-namespace:WPF_YouTube_tutorial.Pages"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
-      Title="NewSessionPage">
+      Title="WorkoutLibraryPage">
 
     <Grid>
-
-        <Label></Label>
-        
-        
         
     </Grid>
 </Page>
