--- a/WPF YouTube tutorial/Pages/NewSessionPage.xaml
+++ b/WPF YouTube tutorial/Pages/NewSessionPage.xaml
@@ -5,12 +5,60 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:WPF_YouTube_tutorial.Pages"
       mc:Ignorable="d" 
-      d:DesignHeight="450" d:DesignWidth="800"
       Title="NewSessionPage">
 
     <Grid>
 
-        <Label></Label>
+        <Image Source="/Resources/Images/background_bb_newsession.jpg" HorizontalAlignment="Center" Height="auto" VerticalAlignment="Center" Width="auto" Stretch="UniformToFill"/>
+
+        
+        
+        
+        <Grid>
+               
+
+            <Button x:Name="btnHome"
+                Content="home "
+                Height="50" Width="70"
+                VerticalAlignment="Top"
+                HorizontalAlignment="Left"
+                Margin="50, 50, 0, 0"
+                Foreground="Gray"
+                Background="#121212"
+                FontWeight="Normal"
+                FontSize="15"
+                FontStyle="Italic"
+                FontFamily="Impact"
+                Style="{DynamicResource RoundButton}"
+                Click="btnHome_Click" />
+
+            <Label
+                VerticalAlignment="Center"
+                HorizontalAlignment="Center"
+                
+            />
+
+
+            <Grid>
+
+                <Label
+                    Content="Date:"
+                    Foreground="AntiqueWhite"
+                    FontSize="20"
+                    HorizontalAlignment="Right"
+                    Margin="0, 50,250,0"      
+                    />
+
+
+                
+
+
+            </Grid>
+            
+                
+
+
+        </Grid>
         
         
         
