--- a/WPF YouTube tutorial/Pages/NewSessionPage.xaml
+++ b/WPF YouTube tutorial/Pages/NewSessionPage.xaml
@@ -7,22 +7,39 @@
       mc:Ignorable="d" 
       Title="NewSessionPage">
 
+
+
     <Grid>
 
         <Image Source="/Resources/Images/background_bb_newsession.jpg" HorizontalAlignment="Center" Height="auto" VerticalAlignment="Center" Width="auto" Stretch="UniformToFill"/>
 
-        
-        
-        
-        <Grid>
-               
 
-            <Button x:Name="btnHome"
+
+
+        <Grid>
+
+
+
+
+
+            <Grid>
+
+                <Image Source="/Resources/Images/wp2732950.jpg" Stretch="Fill"
+                       
+                       Margin="30"
+                       VerticalAlignment="Top"
+                       HorizontalAlignment="Center"
+                       Panel.ZIndex="0"
+                       
+                       />
+
+
+                <Button x:Name="btnHome"
                 Content="home "
                 Height="50" Width="70"
                 VerticalAlignment="Top"
                 HorizontalAlignment="Left"
-                Margin="50, 50, 0, 0"
+                Margin="100,40,0,0"
                 Foreground="Gray"
                 Background="#121212"
                 FontWeight="Normal"
@@ -32,35 +49,38 @@
                 Style="{DynamicResource RoundButton}"
                 Click="btnHome_Click" />
 
-            <Label
-                VerticalAlignment="Center"
-                HorizontalAlignment="Center"
-                
-            />
-
-
-            <Grid>
 
                 <Label
                     Content="Date:"
                     Foreground="AntiqueWhite"
                     FontSize="20"
                     HorizontalAlignment="Right"
-                    Margin="0, 50,250,0"      
+                    VerticalAlignment="Top"
+                    Margin="0,44,362,0"      
                     />
 
+                <DatePicker
+                   
+                    Margin="0,48,100,0"
+                    VerticalAlignment="Top"
+                    HorizontalAlignment="Right" Height="30"
+                    SelectedDateFormat="Long"
+                    FontSize="15" Width="255"
+                    
+                    
+                />
 
-                
+
 
 
             </Grid>
-            
-                
+
+
 
 
         </Grid>
-        
-        
-        
+
+
+
     </Grid>
 </Page>
