--- a/WPF YouTube tutorial/Pages/NewSessionPage.xaml
+++ b/WPF YouTube tutorial/Pages/NewSessionPage.xaml
@@ -35,7 +35,9 @@
 
 
                 <Button x:Name="btnHome"
-                Content="home "
+                        
+                    Content="home "
+                        
                 Height="50" Width="70"
                 VerticalAlignment="Top"
                 HorizontalAlignment="Left"
@@ -66,9 +68,162 @@
                     HorizontalAlignment="Right" Height="30"
                     SelectedDateFormat="Long"
                     FontSize="15" Width="255"
+                    BorderBrush="Transparent"
+                    Background="#121212"
                     
                     
                 />
+
+
+                <Grid x:Name="WorkoutGrid">
+
+                    <Label
+                
+                         Content="Set:"
+                    
+                          Height="60" Width="200"
+                          VerticalAlignment="Top"
+                          HorizontalAlignment="Left"
+                          Margin="400,200,0,0"
+                          Foreground="Gray"
+                          FontWeight="Normal"
+                          FontSize="30"
+                          FontStyle="Italic"
+                          FontFamily="Impact"
+                    
+                    />
+
+                    <Label
+                
+                         Content="Repetitions:"
+                    
+                        Height="60" Width="200"
+                        VerticalAlignment="Top"
+                        HorizontalAlignment="Left"
+                        Margin="600,200,0,0"
+                        Foreground="Gray"
+                        FontWeight="Normal"
+                        FontSize="30"
+                        FontStyle="Italic"
+                        FontFamily="Impact"
+                    
+                />
+
+                    <Label
+                
+                    Content="Weight:"
+                    
+                Height="60" Width="200"
+                VerticalAlignment="Top"
+                HorizontalAlignment="Left"
+                Margin="950,200,0,0"
+                Foreground="Gray"
+                FontWeight="Normal"
+                FontSize="30"
+                FontStyle="Italic"
+                FontFamily="Impact"
+                    
+                />
+
+                    <Label
+                
+                    Content="Comment:"
+                    
+                Height="60" Width="200"
+                VerticalAlignment="Top"
+                HorizontalAlignment="Left"
+                Margin="1200,200,0,0"
+                Foreground="Gray"
+                FontWeight="Normal"
+                FontSize="30"
+                FontStyle="Italic"
+                FontFamily="Impact"
+                    
+                />
+
+
+                    <Label
+                        
+                       Content="1."
+                        
+                       Height="50" Width="100"
+                       VerticalAlignment="Top"
+                       HorizontalAlignment="Left"
+                       Margin="410,265,0,0"
+                       Foreground="Gray"
+                       FontWeight="Normal"
+                       FontSize="30"
+                       FontStyle="Italic"
+                       FontFamily="Impact"
+                        
+                        
+                        />
+
+                    <TextBox
+                        
+            
+                      Height="40" Width="70"
+                      VerticalAlignment="Top"
+                      HorizontalAlignment="Left"
+                      Margin="660,275,0,0"
+                      Background="#121212"
+                      Foreground="Gray"
+                      FontWeight="Normal"
+                      FontSize="30"
+                      FontStyle="Italic"
+                      FontFamily="Impact"
+                      HorizontalContentAlignment="Center"
+                      VerticalContentAlignment="Center"
+                      BorderBrush="Transparent"
+                      />
+
+                    <TextBox
+                        
+            
+                       Height="40" Width="70"
+                      VerticalAlignment="Top"
+                      HorizontalAlignment="Left"
+                      Margin="980,275,0,0"
+                      Background="#121212"
+                      Foreground="Gray"
+                      FontWeight="Normal"
+                      FontSize="30"
+                      FontStyle="Italic"
+                      FontFamily="Impact"
+                      HorizontalContentAlignment="Center"
+                      VerticalContentAlignment="Center"
+                      BorderBrush="Transparent"
+                      />
+
+
+                    <TextBox
+                         Height="90" Width="500"
+                      VerticalAlignment="Top"
+                      HorizontalAlignment="Left"
+                      Margin="1200,275,0,0"
+                      Background="#121212"
+                      Foreground="Gray"
+                      FontWeight="Normal"
+                      FontSize="25"
+                      FontStyle="Italic"
+                      FontFamily="Impact"
+                      HorizontalContentAlignment="Center"
+                      VerticalContentAlignment="Center"
+                      BorderBrush="Transparent"
+                      TextWrapping="Wrap"
+                      MaxLength="100"
+                        
+                        
+                        />
+
+
+
+
+
+
+
+                </Grid>
+
 
 
 
