--- a/WPF YouTube tutorial/App.xaml
+++ b/WPF YouTube tutorial/App.xaml
@@ -8,24 +8,70 @@
     <Application.Resources>
         
         
-        <Style TargetType="Button" x:Key="RoundButton">
+        <!-- Setters for Main Menu buttons style-->
+
+        <Style TargetType="Button" x:Key="ButtonStyle">
+
+            <Setter Property="Foreground" Value="Gray"/>
+            <Setter Property="FontStyle" Value="Italic"/>
+            <Setter Property="FontFamily" Value="Impact"/>
+            <Setter Property="Background" Value="#121212"/>
+            <Setter Property="Margin" Value="20"/>
+            <Setter Property="VerticalAlignment" Value="Top"/>
+            <Setter Property="HorizontalAlignment" Value="Left"/>
+            <Setter Property="Width" Value="250"/>
+            <Setter Property="Height" Value="100"/>
+            <Setter Property="FontSize" Value="30"/>
+
             <Style.Resources>
                 <Style TargetType="Border">
-                    <Setter Property="CornerRadius" Value="10" />
+                    
+                    <Setter Property="CornerRadius" Value="10"/>
+
                 </Style>
+
             </Style.Resources>
 
         </Style>
 
+        
+        <!-- Setters for Home button style -->
+        
+        <Style TargetType="Button" x:Key="HomeButton">
+
+            <Setter Property="Foreground" Value="Gray"/>
+            <Setter Property="FontStyle" Value="Italic"/>
+            <Setter Property="FontFamily" Value="Impact"/>
+            <Setter Property="Background" Value="#121212"/>
+            <Setter Property="Margin" Value="50"/>
+            <Setter Property="VerticalAlignment" Value="Top"/>
+            <Setter Property="HorizontalAlignment" Value="Left"/>
+            <Setter Property="Width" Value="100"/>
+            <Setter Property="Height" Value="50"/>
+            <Setter Property="FontSize" Value="20"/>
 
 
+            <Style.Resources>
+                <Style TargetType="Border">
 
+                    <Setter Property="CornerRadius" Value="15"/>
 
+                </Style>
 
+            </Style.Resources>
 
-
-
-
-
+        </Style>
+        
+        <!-- COMMENT PLACEHOLDER -->
+        
+        
+        
+        
+        
+        
+        
+        
     </Application.Resources>
+    
+
 </Application>
