--- a/WPF YouTube tutorial/MainWindow.xaml
+++ b/WPF YouTube tutorial/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WPF_YouTube_tutorial"
         mc:Ignorable="d"
-        Title="MainWindow" MinHeight="800" MinWidth="1600">
+        Title="MainWindow" Height="1000" Width="1600">
         
          
 
