--- a/WPF YouTube tutorial/Pages/NewSessionPage.xaml
+++ b/WPF YouTube tutorial/Pages/NewSessionPage.xaml
@@ -27,66 +27,79 @@
 
 
 
-        <Border Padding="150">
-            <StackPanel>
 
-                <Grid>
-
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="2*"/>
-                        <ColumnDefinition Width="*"/>
-                        <ColumnDefinition Width="*"/>
-                        <ColumnDefinition Width="*"/>
+        <Border Padding="150"
+                >
+            <ScrollViewer VerticalScrollBarVisibility="Auto">
 
 
-                    </Grid.ColumnDefinitions>
+                
+                <StackPanel x:Name="workoutStackPanel">
 
-                    <Label Grid.Column="0" Style="{StaticResource defaultLabel}">Workout:</Label>
-                    <Label Grid.Column="1" Style="{StaticResource defaultLabel}">Set:</Label>
-                    <Label Grid.Column="2" Style="{StaticResource defaultLabel}">Repetitions:</Label>
-                    <Label Grid.Column="3" Style="{StaticResource defaultLabel}">Weight:</Label>
+                    <Grid>
 
-                </Grid>
-
-                <StackPanel x:Name="workoutSetsStackPanel">
-
-                    <Grid Margin="0, 0, 0, 50">
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="2*"/>
                             <ColumnDefinition Width="*"/>
                             <ColumnDefinition Width="*"/>
                             <ColumnDefinition Width="*"/>
 
+
                         </Grid.ColumnDefinitions>
 
-
-                        <ComboBox Grid.Column="0"  Margin="50,0,100,0"></ComboBox>
-
-
-                        <Label Grid.Column="1" Style="{StaticResource defaultLabel}" Content="1."/>
-                        <TextBox Grid.Column="2" Style="{StaticResource defaultTextBox}"/>
-                        <TextBox Grid.Column="3" Style="{StaticResource defaultTextBox}"/>
+                        <Label Grid.Column="0" Style="{StaticResource defaultLabel}">Workout:</Label>
+                        <Label Grid.Column="1" Style="{StaticResource defaultLabel}">Set:</Label>
+                        <Label Grid.Column="2" Style="{StaticResource defaultLabel}">Repetitions:</Label>
+                        <Label Grid.Column="3" Style="{StaticResource defaultLabel}">Weight:</Label>
 
                     </Grid>
 
-                    
+                    <StackPanel x:Name="workoutSetsStackPanel" >
+
+
+                        <Grid Margin="0, 0, 0, 50">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="2*"/>
+                                <ColumnDefinition Width="*"/>
+                                <ColumnDefinition Width="*"/>
+                                <ColumnDefinition Width="*"/>
+
+                            </Grid.ColumnDefinitions>
+
+
+                            <ComboBox Grid.Column="0"  Margin="50,0,100,0"></ComboBox>
+
+
+                            <Label Grid.Column="1" Style="{StaticResource defaultLabel}" Content="1."/>
+                            <TextBox Grid.Column="2" Style="{StaticResource defaultTextBox}"/>
+                            <TextBox Grid.Column="3" Style="{StaticResource defaultTextBox}"/>
+
+                        </Grid>
+
+                    </StackPanel>
+
+
+                    <StackPanel Orientation="Horizontal">
+
+                        <Button Style="{StaticResource defaultButton}" Content="+" Click="btnAddNewSet"/>
+                        <Button Style="{StaticResource defaultButton}" Content="-" Foreground="Red" TextBlock.FontSize="35" Click="btnRemoveSet"/>
+
+                    </StackPanel>
+
+
+                    <Button Style="{StaticResource HomeButton}" Content="Add new workout" Width="200" Click="btnAddNewWorkout"/>
                     
 
                 </StackPanel>
 
 
-                <Button Style="{StaticResource defaultButton}" Content="+" 
-                        Click="btnAddNewSet"
-                        
-                        />
 
 
-            </StackPanel>
+
+
+            </ScrollViewer>
+
         </Border>
-
-
-
-
 
 
 
